--- a/client/src/styling/index.css
+++ b/client/src/styling/index.css
@@ -3,12 +3,59 @@
 @tailwind utilities;
 
 #root {
+  position: relative;
+
   display: flex;
   flex-direction: column;
 
   min-height: 100svh;
+
+}
+
+#root::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100vw;
+  height: 100vh;
+
+  background-color: rgb(247, 247, 247);
+
+  z-index: -1;
+}
+
+#root::after {
+  content: '';
+  position: absolute;
+  top:-20rem;
+  left: -35%;
+
+  width: 100%;
+  height: 50rem;
+
+  z-index: -1;
+
+  filter: blur(20px);
+
+  background: rgb(105,52,156);
+  background: radial-gradient(circle, rgba(105,52,156,1) 0%, rgba(255,255,255,1) 49%);
+
 }
 
 main {
+  display: flex;
+  flex-direction: column;
+  
   flex: 1;
+}
+
+.preview-wrapper .chatbot-window {
+  display: flex !important;
+}
+
+.preview-wrapper .chatbot-open-btn {
+  position: static !important;
+
 }
